--- a/DAY13/contact.html
+++ b/DAY13/contact.html
@@ -24,7 +24,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-6">
-                    <!--contact form-->
+                    <label>Name:</label><br>
+    <input type="text" name="firstName" placeholder="First Name">
+    <input type="text" name="lastName" placeholder="lastName"><br><br>
+                  <label>cellphone NO:</label> <br>
+                  <input type="number" name="cellphone"><br>
+                  <label>email::</label> <br>
+                  <input type="text" name="email"> <br>
+                  <label >subject:</label> <br>
+                  <input type="text" name="subject">
+                  <label >service</label>
+                  <select>
+                    <option>marathali road service</option>
+                    <option>bsk road service</option>
+                    <option>benguluru road service</option>
+                    
+
+                  </select>
+                    
                 </div>
                 <div class="col-6">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29564.491604340972!2d77.6830976!3d12.976128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1232926e3e27%3A0x209977809b7a70e!2sKalamandir!5e1!3m2!1sen!2sin!4v1764657488079!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
