--- a/DAY14/login.html
+++ b/DAY14/login.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-      <link rel="stylesheet" href="./bs.css">
-     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
+
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     </head>
     <body>
       
@@ -23,18 +23,48 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-3">
-                    <form action="/login">
-                        <div class="form-group">
-                            <label >Email Id:</label>
-                            <input type="text" class="form-control"/>  
+                    <div class="col-4">
+                        <form action="/login">
+                            <div class="form-group">
+                                <label >Email Id:</label>
+                                <input type="text" class="form-control"/>  
+                            </div>
+                            <div class="form-group">
+                                <label>Password:</label>
+                                <input type="password"  class="form-control">
+                            </div>
+                            <input type="submit" value="Login" class="btn btn-warning"/>
+                        </form>
+                    </div>
+                    <div class="col-4">
+                        <form action="/login.html">
+                            <div class="form-group">
+                                <input type="text" placeholder="Email" class="form-control"/>  
+                            </div>
+                            <div class="form-group">
+                                <input type="password"placeholder="password" class="form-control">
+                            </div>
+                            <input type="submit" value="Login" class="btn btn-warning"/>
+                        </form>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <div class="card-header bg-dark text-white">
+                                <h3>login details</h3>
+                            </div>
+                            <div class="card-body">
+                                <form action="product.html">
+                                    <div class="form-group">
+                                        <input type="text" placeholder="Email" class="form-control"/>
+
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" placeholder="password" class="form-control">
+                                    </div>
+                                    <input type="submit" value="login" class="btn btn-warning"/>
+                                </form>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label>Password:</label>
-                            <input type="password" class="form-control">
-                        </div>
-                        <input type="submit" value="Login" class="btn btn-warning"/>
-                    </form>
                     </div>
                 </div>
             </div>
