--- a/DAY14/contact.html
+++ b/DAY14/contact.html
@@ -46,15 +46,15 @@
                                 </div>
                                 
                             </div>
-                             <div class="row">
-                            <div class="col-8">
-                            <div class="form-group">
+                                <div class="ROW">
+                                    <div class="COL-8">
+                                        <div class="FORM-GOURP">
+                                            <LAbel>SUBJECT</LAbel>
+                                            <input type="text" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
                             
-                            <label >subject</label>
-                            <input type="text" class="form-control">
-                            </div>
-                            </div>
-                            </div>
                             <div class="col-4">
                                 <div class="form-group">
                                     <label services></label>
