--- a/DAY14/index.html
+++ b/DAY14/index.html
@@ -1,11 +1,32 @@
 <html>
     <head>
         <title>sr website</title>
+        <link rel="stylesheet" href="./one.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width="device-width,initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js">
+
+        </script>
+         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js">
+
+         </script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js">
+
+            </script>
+  <style>
+        /* Make the image fully responsive */
+            .carousel-inner img {
+                 width: 100%;
+                 height: 100%;
+                 }
+  </style>
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
     </head>
     <body>
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-            <a href="" class="navbar-brand" >logo</a>
+            <a href="./index.html" class="navbar-brand" >logo</a>
             <div class="ml-auto">
                 <ul class="navbar-nav">
                     <li><a href="./index.html" class="nav-link">home</a></li>
@@ -20,7 +41,33 @@
             </div>
 
         </nav>
-        <div><h3>home page</h3></div>
+        <div><h3>home page</h3>
+
+        </div>
+        <div class="container-flouid">
+            <div class="row">
+                <div class="col">
+                    <div class="carousel">
+                        <div class="carousel-inner">
+                            <div class="carosel-item">
+                                <img src="/image/pexels-egos68-1906658.jpg" alt="">
+                            </div>
+                            <div class="carosel-item">
+                                <img src="/image/pexels-kripesh-adwani-223818-709143.jpg" alt="">
+                            </div>
+                            <div class="carosel-item">
+                                <img src="/image/pexels-olly-3764579.jpg" alt="">
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>$('.carousel').carousel({
+  interval: 1000
+})
+</script>
 
     </body>
 </html>
